[workspace]
members = ["examples"]

[package]
name = "netu"
version = "0.2.0"
edition = "2021"
description = "Networking utilities."
license = "MIT"
repository = "https://github.com/XToripuru/netu"

[dependencies]
tokio = { version = "1", optional = true }
log = "0.4"
pretty_env_logger = "0.5"
igd = "0.12"
local-ip-address = "0.6"
serde = { version = "1", features = ["derive"] }
bincode = "1"

[features]
async = ["tokio", "igd/aio"]