[package]
name = "examples"
version = "0.0.0"
edition = "2021"

[dependencies]
netu = { path = "..", features = ["async"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

[[example]]
name = "sync-client-server"
path = "sync-client-server.rs"

[[example]]
name = "sync-forwarding"
path = "sync-forwarding.rs"